changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

The hiscore command requests 50 high scores, but for some reason the command
that outputs the scores arbitrarily returns only 49.  Removed a needless
decrement of the max parameter.  Now the command returns 50.
Kevin Bulgrien 2009-08-31

Remove i18n strings and help files that used to support the output-sync and
output-count functionality.
Kevin Bulgrien 2009-08-31

Remove output-count and output-sync from the server.  Remove the output buffer
defines and declarations, along with the outputs_sync and outputs_count items.
Remove now unused flush_output_element(), check_output_buffers(), various
comments, calls to removed functions, output-sync and output-count command
support, player struct outputs_sync and outputs_count members.  This mod does
attempt to preserve player file compatibility with older server versions by
always saving legacy defaults to the player file outputs_sync and count
parameters.  Re-ran make cproto to add missing items fix brokenness in the
proto files.  NOTE:  References to I18N_MSG_CMISC_099, 100, 101, 102, 103, and
104 were removed, but the messages themselves were not removed and no attempt
was made to see if other references still exist.
Kevin Bulgrien 2009-08-13

Fix bug 2835449 pickup is broken by changing server/login.c check_login() to
read the pickup value saved in the player file as an unsigned value instead
of as a signed value.  Unfortunately corrupted player files still have the
debug bit set, and this fix does not address that issue.  To fix the player
file, zero out the pickup value, or adjust the value to turn off the debug
bit.