@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Change exits pointing to new map's default coordinates from (0,0) to
+(-1,-1). This allows exits to point to (0,0).
+Andreas Kirschbaum 2009-10-23
+
 The hiscore command requests 50 high scores, but for some reason the command
 that outputs the scores arbitrarily returns only 49.  Removed a needless
 decrement of the max parameter.  Now the command returns 50.
